add handle para erro de paginação e atualização de testes após paginação